# IPUI

./: .gitignore  CLAUDE.md  README.md  codex_windows_pycharm_git_cheatsheet.md  main.py  pyproject.toml  run.bat  wheel.bat
.claude/: settings.local.json
docs/: API_Review.md  FinishedTranslation.txt  IPUI_Layout_Guide_Original_Flex.md  Lifecycle_Timing.md  Mendoza_Transcreation.html  NamingAndConventions.md  Progressive_Anchoring.html  README.md  Reading_IPUI_Source_Code.md  WhyIPUIDoesThingsDifferently.md  Why_IPUI_Does_Things_Differently.md  neuroforge_thesis.html  temp.md  temp.py
src/forms/Asteroids/: FormAsteroids.py  as.py
src/forms/Debugger/: Layout.py  Magic.py  Overlay.py  Pipeline.py  Ref.py  Reference.py  Tree.py  TreeBackup.py
src/forms/NeuroForge/: FormNeuroForge.py  SubProcesses.py
src/forms/ParticleLife/: Form_ParticleLife.py  Iamnothere.py  ParticleLife.py  ParticleLife2.py  Particles.py  Rules.py  Settings.py
src/forms/QuickStart/: FormQuickStart.py  Hello.py  SmokeTest.py  Tab3.py  Tab4.py  Tab_2.py  Widgets.py
src/forms/Showcase/: BUILD__IDEAL_STUB.py  Ball.py  Breakout.py  Breakout_Minimum.py  Breakout_Simple.py  Breakout_contendor_2.py  DeleTemeTest.py  Designer.py  FixScroll.py  FormShowcase.py  Freebies.py  Overview.py  Overview2.py  Paradigm.py  PygameBall.py  PygameBall2.py  Relax.py  SQL.py  Showcase.py  TestDisabled.py  Test_Selector.py  Tree.py  Welcome.py  Welcome2.py  Welcome3.py  Widgets.py  Wiring.py  YourChoice.py  frmPro.py  test.py
src/ipui/: Style.py  __init__.py
src/ipui/docs/: API_Review.md  IPUI_Layout_Guide_Original_Flex.md  LifecycleTiming.md  NamingAndConventions.md  Naming_And_Conventions.md  ProjectManager.py  README.md  SPEC_ip.md  Why_IPUI_Does_Things_Differently.md  _packaging_notes.md  temp.md  test_for_inits.md
src/ipui/engine/: GameLoop.py  IP.py  IPBACKUP.py  IPContext.py  IPUI.py  Key.py  Log.py  MeasureAndLayout.py  MeasureAndWrap.py  MgrColor.py  MgrFont.py  MgrInput.py  MgrSanity.py  MissingTabUI.py  MixinScrollH.py  Mouse.py  NotNP_HardHug.py  NotNP_HardLayout.py  NotNP_HardWrap.py  Pipeline.py  StateMachine.py  WidgetsDict.py  _BaseForm.py  _BaseHugeTooltip.py  _BasePane.py  _BaseTab.py  _BaseWidget.py  _IPUI.py  ___ToDoList.py
src/ipui/popups/: TooltipArena.py  TooltipWidget.py
src/ipui/utils/: Align.py  EZ.py  EZ_v1.py  IconCache.py  MgrAccessImport.py  MgrClipboard.py  MgrDT.py  MgrFileManager.py  MgrMsgBox.py  MgrPkgPath.py  MgrPrefs.py  Palette.py  SQLDataSource.py  WidgetCatalog.py  general_text.py
src/ipui/widgets/: BannerPlate.py  Button.py  ButtonDrip.py  ButtonGroup.py  Card.py  Chart.py  ChartWidget.py  CodeBox.py  CodeBoxComposit.py  CodeScroller.py  CopyButton.py  DropDown.py  Grid.py  Icon.py  Image.py  Label.py  MarkdownBody.py  MarkdownTOC.py  MarkdownView.py  NetworkDiagram.py  NeuronCell.py  (+15 more)
(+142 files in other folders)
