[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipui"
version = "0.1.0"
description = "A pygame UI framework.  Easy to get right. Hard to get wrong."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ChrisFirst", email = "chrisfirstarchitect@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5",
]
keywords = ["ui", "gui", "pygame", "framework", "widgets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]

[tool.ruff.format]
exclude = ["*"] # Effectively tells formatters to ignore the whole project

[project.optional-dependencies]
charts = ["matplotlib>=3.7"]
all    = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/oldwolfster/ipui"
Issues   = "https://github.com/oldwolfster/ipui/issues"

[tool.setuptools.packages.find]
where = ["src"]
